[gd_scene load_steps=3 format=3 uid="uid://bcagu03eydtpw"]

[ext_resource type="Script" path="res://apps/settings/interface/settings_menu.gd" id="1_h3mfl"]
[ext_resource type="Script" path="res://interface/components/toggle_switch.gd" id="1_qbuhn"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h3mfl")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.0
offset_top = -478.0
offset_right = 323.0
offset_bottom = 478.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
offset_left = 24.0
offset_top = 36.0
offset_right = 622.0
offset_bottom = 920.0

[node name="SettingsLabel" type="Label" parent="PanelContainer/VBoxContainer"]
offset_right = 598.0
offset_bottom = 86.0
theme_type_variation = &"H1"
text = "Settings"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
offset_top = 98.0
offset_right = 598.0
offset_bottom = 162.0

[node name="Use24HourClockContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
offset_top = 174.0
offset_right = 598.0
offset_bottom = 234.0

[node name="Use24HourClockLabel" type="Label" parent="PanelContainer/VBoxContainer/Use24HourClockContainer"]
offset_top = 4.0
offset_right = 466.0
offset_bottom = 55.0
size_flags_horizontal = 3
text = "Use 24-hour clock"

[node name="Use24HourClockToggle" type="Button" parent="PanelContainer/VBoxContainer/Use24HourClockContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(120, 0)
offset_left = 478.0
offset_right = 598.0
offset_bottom = 60.0
theme_type_variation = &"ToggleSwitch"
toggle_mode = true
script = ExtResource("1_qbuhn")

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
offset_top = 246.0
offset_right = 598.0
offset_bottom = 310.0

[node name="AccessibilityLabel" type="Label" parent="PanelContainer/VBoxContainer"]
offset_top = 322.0
offset_right = 598.0
offset_bottom = 391.0
theme_type_variation = &"H3"
text = "Accessibility"

[node name="LimitAnimationsContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
offset_top = 403.0
offset_right = 598.0
offset_bottom = 463.0

[node name="LimitAnimationsLabel" type="Label" parent="PanelContainer/VBoxContainer/LimitAnimationsContainer"]
offset_top = 4.0
offset_right = 466.0
offset_bottom = 55.0
size_flags_horizontal = 3
text = "Limit animations"
vertical_alignment = 1

[node name="LimitAnimationsToggle" type="Button" parent="PanelContainer/VBoxContainer/LimitAnimationsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(120, 0)
offset_left = 478.0
offset_right = 598.0
offset_bottom = 60.0
theme_type_variation = &"ToggleSwitch"
toggle_mode = true
script = ExtResource("1_qbuhn")

[node name="FontSizeContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
offset_top = 475.0
offset_right = 598.0
offset_bottom = 615.0

[node name="FontSizeLabel" type="Label" parent="PanelContainer/VBoxContainer/FontSizeContainer"]
offset_right = 286.0
offset_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Font size"
vertical_alignment = 2

[node name="FontSizeItemList" type="ItemList" parent="PanelContainer/VBoxContainer/FontSizeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(300, 140)
offset_left = 298.0
offset_right = 598.0
offset_bottom = 140.0
item_count = 6
item_0/text = "Smallest"
item_1/text = "Small"
item_2/text = "Medium"
item_3/text = "Big"
item_4/text = "Bigger"
item_5/text = "Biggest"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
offset_top = 627.0
offset_right = 598.0
offset_bottom = 691.0

[node name="ModsLabel" type="Label" parent="PanelContainer/VBoxContainer"]
offset_top = 703.0
offset_right = 598.0
offset_bottom = 772.0
theme_type_variation = &"H3"
text = "Mods"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
offset_top = 784.0
offset_right = 598.0
offset_bottom = 884.0

[node name="EnabledModsLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
offset_right = 186.0
offset_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Enabled mods"
vertical_alignment = 2

[node name="EnabledModsItemList" type="ItemList" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(400, 100)
offset_left = 198.0
offset_right = 598.0
offset_bottom = 100.0
auto_height = true
